Archive2/de/c09f488b37305a/output
clang version 3.4 (tags/RELEASE_34/final 206911)
Target: x86_64-unknown-linux-gnu
Thread model: posix
main.cpp:20:8: error: virtual function 'Base::f' has more than one final overrider in 'Middle'
struct Middle
       ^
main.cpp:6:19: note: overridden virtual function is here
    virtual Base *f() const = 0;
                  ^
main.cpp:12:19: note: final overrider of 'Base::f' in 'A'
    virtual Base *f() const override = 0;
                  ^
main.cpp:17:19: note: final overrider of 'Base::f' in 'B'
    virtual Base *f() const override = 0;
                  ^
1 error generated.
